--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
 body {
   background-color: #083b4c;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  margin: 0;
+}
+
+hr {
+  width: 80vw;
+  margin: 100px 0;
 }
 
 form {
-  text-align: center;
   color: white;
   font-size: 20px;
   font-family: 'Courier New', Courier, monospace;
@@ -51,4 +62,12 @@ button {
 
 button:hover {
   background-color: #00b48a; 
+}
+
+#output1 {
+  text-align: center;
+  color: white;
+  font-size: 30px;
+  font-family: 'Courier New', Courier, monospace;
+  margin-top: 30px;
 }
